--- a/index.css
+++ b/index.css
@@ -198,6 +198,10 @@ footer {
     padding: 7px;
 }
 
+.fa-chart-line::before {
+    font-size: x-large;
+}
+
 .fa-child::before {
     font-size: x-large;
     color: #0082ff;
@@ -251,10 +255,6 @@ a {
     margin-top: 20px;
     display: flex;
     justify-content: space-around;
-}
-
-#aside_logo {
-    margin-left: 18em;
 }
 
 .card_aside {
@@ -573,10 +573,7 @@ a {
     .SearchBar input[type=button] {
         width: 16%;
     }
-    #aside_logo {
-        margin: -6% 33% 0% 0%;
-        float: right;
-    }
+
     .card_aside a {
         display: flex;
         margin-left: auto;
@@ -845,9 +842,7 @@ a {
         height: 30px;
         width: 200px;
     }
-    #aside_logo {
-        margin-left: 3em;
-    }
+
     .card_aside a {
         display: flex;
         margin-left: auto;
